Imagem da ajuda em 2x pixels

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,45 @@ design/bomba02.png
 html/config.ini
 
 html/teste.php
+
+primeira-versao/config.ini
+
+primeira-versao/controlador.php
+
+primeira-versao/css/layout.css
+
+primeira-versao/css/reset.css
+
+primeira-versao/exibe-detalhe.php
+
+primeira-versao/imagens/anterior-off.png
+
+primeira-versao/js/scripts.js
+
+primeira-versao/js/jquery.js
+
+primeira-versao/js/html5shiv.js
+
+primeira-versao/index.php
+
+primeira-versao/imagens/proxima-on.png
+
+primeira-versao/imagens/proxima-off.png
+
+primeira-versao/imagens/logo-rp.png
+
+primeira-versao/imagens/icone-problemas.png
+
+primeira-versao/imagens/icone-empresas.png
+
+primeira-versao/imagens/icone-assuntos.png
+
+primeira-versao/imagens/icone-ajuda.png
+
+primeira-versao/imagens/fundo-topo.gif
+
+primeira-versao/imagens/fundo-body.gif
+
+primeira-versao/imagens/bot-busca.png
+
+primeira-versao/imagens/anterior-on.png
