--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,13 @@ primeira-versao/imagens/fundo-body.gif
 primeira-versao/imagens/bot-busca.png
 
 primeira-versao/imagens/anterior-on.png
+
+html/config.ini
+
+html/config.ini
+
+html/config.ini
+
+html/config.ini
+
+html/config.ini
