Versão Concurso Acessibilidade
Todas alterações feitas para a participação no concurso Todos@Web do W3C

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -2,10 +2,11 @@ RewriteEngine On
 #Redirecionamento de Buscas
 RewriteCond %{QUERY_STRING} !=""
 RewriteCond %{QUERY_STRING} ^pesquisa=([^/]*)$ [NC]
-RewriteRule ^(.*)$ /ReclamacoesProcon/html/pesquisa/%1? [R]
-RewriteRule ^pesquisa/([^/]*)$ /ReclamacoesProcon/html/resultados-busca.php?empresa=$1
-RewriteRule ^pesquisa/([^/]*)/([^/]*)$ /ReclamacoesProcon/html/resultados-busca.php?empresa=$1&pagina=$2
-ErrorDocument 404 /ReclamacoesProcon/html/pagina-nao-encontrada.php
+RewriteRule ^(.*)$ /pesquisa/%1? [R]
+RewriteRule ^pesquisa/([^/]*)$ /resultados-busca.php?empresa=$1
+RewriteRule ^pesquisa/([^/]*)/([^/]*)$ /resultados-busca.php?empresa=$1&pagina=$2
+RewriteRule ^sitemap.xml$ /sitemap.php
+ErrorDocument 404 /pagina-nao-encontrada.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^([a-zA-Z0-9_-]+)$ reclamacoes.php?empresa=$1 [QSA]
@@ -17,5 +18,5 @@ RewriteRule ^([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/([a-zA-Z0-9_-]+)/$ reclamacoes.ph
 <filesMatch ".(js|php|css)$">
 SetOutputFilter DEFLATE
 </filesMatch>
-#ExpiresActive On
-#ExpiresDefault "access plus 10 years"
+ExpiresActive On
+ExpiresDefault "access plus 1 month"
